--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,10 +1,9 @@
-.news {
-  display: grid;
-  place-items: center;
-}
-
 .card {
   width: 100vw;
+}
+
+.swiper {
+  z-index: -1 !important;
 }
 
 .swiper-slide {
